Fixed and aligned Fisherman and line

--- a/Zen/style.scss
+++ b/Zen/style.scss
@@ -86,6 +86,17 @@ a:active {
     }
 }
 
+section::after {
+    background: transparent url(man.svg) no-repeat center;
+    content: "";
+    height: 50px;
+    width: 100%;
+    background-size: 8em;
+    display: inline-block;
+    position: relative;
+    background-size: contain;
+}
+
 .summary::before {
     //background-color: black;
     display: inline-block;
